[package]
name = "bilili_danmuji_rs"
version = "0.1.0"
authors = ["tcdk <458761603@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3" , default-features = false, features = ["async-await", "sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.14", features = ["rustls-tls"] }
url = "2.0.0"
reqwest = { version = "0.11", features = ["json","cookies","rustls-tls"], default-features = false }

log = "0.4"
log4rs = "1"

#ecode
serde_json = "1.0"
serde = "1.0"
inflate = "0.4"
gzip = "0.1.2"
byteorder = "1"

#error
anyhow = "1.0"
thiserror = "1.0"

#qrcode
qrcode = "0.12"

[dev-dependencies]
base64 = "0.13.0"